# ncnn-demos

docs/: Android环开发境配置.md  chapter-1-界面显示与逻辑处理.md  编译ncnn.md  编译opencv.md
environment/: README.md
environment/ncnn-android/include/ncnn/: platform.h
environment/ncnn-android/lib/cmake/ncnn/: ncnn-release.cmake  ncnn.cmake
environment/ncnn-android/lib/pkgconfig/: ncnn.pc
environment/ncnn/include/ncnn/: platform.h
environment/ncnn/lib/: ncnn.lib
environment/ncnn/lib/cmake/ncnn/: ncnn.cmake
environment/ncnn/lib/pkgconfig/: ncnn.pc
environment/opencv-mobile-android/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake
environment/opencv-mobile/x64/vc17/staticlib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_highgui4100.lib  opencv_photo4100.lib  opencv_video4100.lib
environment/protobuf/cmake/: protobuf-config-version.cmake
environment/protobuf/lib/: libprotobuf-lite.lib
environment/protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
environment/scripts/: build_android_ncnn.bat  build_ncnn.bat  build_ncnn_android.bat  build_opencv.bat  build_opencv_android.bat  build_protobuf.bat
nanodet/docs/: README.md
nanodet/models/: nanodet_m_0.5x.ckpt  nanodet_m_0.5x.torchscript.ncnn.param
nanodet/python/: demo.py
ncnn/include/ncnn/: platform.h
ncnn/lib/cmake/ncnn/: ncnn.cmake
ncnn/lib/pkgconfig/: ncnn.pc
opencv/include/opencv2/: cvconfig.h
opencv/staticlib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  libjpeg-turbo.lib  libopenjp2.lib  libpng.lib  libwebp.lib  opencv_highgui249.lib  opencv_highgui4100.lib  opencv_photo249.lib  opencv_video249.lib  zlib.lib
resnet/c++/: CMakeLists.txt  build.bat  main.cpp
resnet/c++/src/: CMakeLists.txt  build.bat  classification.cpp  classification.h  resnet.cpp  resnet.h
resnet/python/: convert_model.py  get_model.py  infer.py
scripts/: build_ncnn.bat  build_opencv.bat
yolo11/docs/: README.md
yolo11/python/: demo.py
yolov5/c++/ncnn-demo/: ncnn-demo.cpp
yolov5/docs/: README.md
yolov5/models/: yolov5n.ncnn.param  yolov5s-detect.param  yolov5s.ncnn.param
yolov5/python/: demo.py
yolov6/c++/ncnn-demo/: CMakeLists.txt
yolov7/c++/: CMakeSettings.json
yolov7/python/: demo.py
yolov8/c++/: CMakeLists.txt
yolov8/c++/ncnn-demo/: ncnn-demo.h
yolov8/python/: demo.py
